@@ -1,4 +1,6 @@
 //= require jquery
 //= require jquery_ujs
 //= require selectize
+//= require moment
+//= require datetime_picker
 //= require_tree .
