@@ -1,0 +1,3 @@
+$(function () {
+  $(".datetimepicker").datetimepicker({ format: "DD/MM/YYYY hh:mm:ss A" });
+});
