@@ -1,0 +1,3 @@
+<% if field.data %>
+  <%= l field.data %>
+<% end %>
