@@ -1,0 +1,6 @@
+require "spec_helper"
+require "administrate/fields/date_time"
+require "support/field_matchers"
+
+describe Administrate::Field::DateTime do
+end
